--- a/src/App.css
+++ b/src/App.css
@@ -7,12 +7,6 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -24,15 +18,15 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
+button {
+  cursor: pointer;
+  border: none;
+  border-radius: 10px;
+  padding: 8px 15px;
+  font-weight: bold;
+  font-size: 15px;
+  width: 140px;
+  height: 40px;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  margin: 10px 10px;
 }
